--- a/WFInfo/Inventory.xaml
+++ b/WFInfo/Inventory.xaml
@@ -19,7 +19,8 @@
         <Grid Margin="1,24,1,0" Height="18" VerticalAlignment="Top">
             <Rectangle Fill="#FF0F0F0F" Stroke="#FF646464" Margin="-1" />
             <CheckBox x:Name="vaulted" Content="Hide Vaulted" ToolTip="Show vaulted items." VerticalContentAlignment="Center" Click="VaultedClick" IsChecked="True" VerticalAlignment="Center" HorizontalAlignment="Left" Height="18"/>
-            <Grid Margin="91,0,139,0" Height="18" VerticalAlignment="Top">
+            <CheckBox x:Name="mastered" Content="Hide Mastered" ToolTip="Show Mastered items." VerticalContentAlignment="Center" Click="MasteredClick" IsChecked="True" VerticalAlignment="Center" HorizontalAlignment="Left" Height="18" Margin="91,0,0,0"/>
+            <Grid Margin="193,0,237,0" Height="18" VerticalAlignment="Top">
                 <Rectangle Fill="#FF0F0F0F" Stroke="#FF646464" Margin="-1" Grid.RowSpan="2" />
                 <Border x:Name="ComboBorder" Margin="47,-1,0,-1" HorizontalAlignment="Left" Width="72">
                     <Border.Style>
@@ -58,9 +59,11 @@
                 <Label Content="Sort by:" Margin="2,0,0,0" Padding="0" VerticalContentAlignment="Center" FontSize="12" Background="{x:Null}" HorizontalAlignment="Left"/>
 
             </Grid>
-            <TextBox x:Name="textBox" Margin="242,0,0,0" VerticalContentAlignment="Center" Padding="0" Text="Filter Terms" Foreground="#FF646464" TextChanged="TextboxTextChanged" SelectionBrush="#FF7EB4EA" GotFocus="TextBoxFocus" LostFocus="TextBoxLostFocus" BorderBrush="#FF303030" BorderThickness="1,0,0,0"/>
-            <Rectangle Stroke="#FF646464" Margin="209,-1,-1,-1"/>
-            <Label Content="Filter:" HorizontalAlignment="Left" Margin="211,0,0,0" Padding="0" VerticalContentAlignment="Center" />
+            <Grid HorizontalAlignment="Left" Height="18" VerticalAlignment="Top" Width="236" Margin="312,0,0,0">
+                <TextBox x:Name="textBox" Margin="32,0,0,0" VerticalContentAlignment="Center" Padding="0" Text="Filter Terms" Foreground="#FF646464" TextChanged="TextboxTextChanged" SelectionBrush="#FF7EB4EA" GotFocus="TextBoxFocus" LostFocus="TextBoxLostFocus" BorderBrush="#FF303030" BorderThickness="1,0,0,0"/>
+                <Rectangle Stroke="#FF646464" Margin="-1"/>
+                <Label Content="Filter:" HorizontalAlignment="Left" Margin="1,0,0,0" Padding="0" VerticalContentAlignment="Center" />
+            </Grid>
 
         </Grid>
         <Grid x:Name="ListGrid" Margin="1,43,1,1">
